temp fix for heading scaling on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -298,7 +298,7 @@ header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: {{ site.data.template.font.secondary }};
     font-size: 22px;
-    font-style: italic;
+    font-weight: 700;
     line-height: 22px;
 }
 
@@ -306,9 +306,9 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 50px;
+    font-size: 20px;
+    font-style: italic;
+    line-height: 20px;
 }
 
 @media(min-width:768px) {
@@ -320,18 +320,18 @@ header .intro-text .intro-heading {
     header .intro-text .intro-lead-in {
         margin-bottom: 25px;
         font-family: {{ site.data.template.font.secondary }};
-        font-size: 40px;
-        font-style: italic;
-        line-height: 40px;
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 22px;
     }
 
     header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: {{ site.data.template.font.primary }};
-        font-size: 75px;
-        font-weight: 700;
-        line-height: 75px;
+        font-size: 20px;
+        font-style: italic;
+        line-height: 20px;
     }
 }
 
